--- a/SA_Week456/SudokuWeb/SudokuWeb.csproj
+++ b/SA_Week456/SudokuWeb/SudokuWeb.csproj
@@ -152,6 +152,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Finished.cshtml" />
+    <Content Include="Views\Home\Exception.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SudokuBasic\SudokuBasic.csproj">
